[gd_scene load_steps=8 format=3 uid="uid://cs40ecju70hnp"]

[ext_resource type="Script" uid="uid://b5ejlbl0vp1gm" path="res://Scripts/Classes/Blocks/BlockClass.gd" id="1_8rosd"]
[ext_resource type="Texture2D" uid="uid://dt0qtxu2l646n" path="res://Assets/Sprites/Tilesets/Terrain/Overworld.png" id="1_v8f21"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="2_8rosd"]
[ext_resource type="PackedScene" uid="uid://b4cf70v1da8cb" path="res://Scenes/Prefabs/Particles/DecoBlockDestructionParticles.tscn" id="2_abwd6"]
[ext_resource type="JSON" path="res://Assets/Sprites/Tilesets/Terrain/TerrainTiles.json" id="3_i7a3s"]
[ext_resource type="Script" uid="uid://d4a7yp6e55u8t" path="res://Scripts/Classes/Components/TrackJoint.gd" id="5_i7a3s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74q7l"]
size = Vector2(16, 16)

[node name="EmptyBlock" type="AnimatableBody2D" node_paths=PackedStringArray("visuals")]
collision_layer = 6
collision_mask = 0
script = ExtResource("1_8rosd")
visuals = NodePath("Sprite")
destruction_particle_scene = ExtResource("2_abwd6")
metadata/_custom_type_script = "uid://b5ejlbl0vp1gm"
metadata/is_empty = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_v8f21")
region_enabled = true
region_rect = Rect2(64, 32, 16, 16)

[node name="ResourceSetterNew" type="Node" parent="Sprite" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("2_8rosd")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("3_i7a3s")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_74q7l")

[node name="TrackJoint" type="Node" parent="."]
script = ExtResource("5_i7a3s")
offset = Vector2(0, 0)
metadata/_custom_type_script = "uid://d4a7yp6e55u8t"
